# chess

./: .editorconfig  CMakeLists.txt  main.py
modules/: Board.py  Pieces.py  Square.py  Windows.py
src/: board.c  board.h  drawable.h  game.h  main.c  square.h  window.c  window.h
src/utils/: point.c  point.h  size.c  size.h
